[package]
name = "enc_chat"
version = "0.1.0"
edition = "2021"
authors = ["William Batista <bootlegbilly@protonmail.ch>"]

[profile.dev]
opt-level = 0
overflow-checks = false
panic = "abort"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
smaz = "0.1"
wasm-bindgen = { version = "0.2.77" }
base64 = "0.13"
rsa = { version = "0.5", features = ["nightly"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["nightly"] }
